7.middleware/deploy/echoapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoapp
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
      annotations:
        dapr.io/enabled: "true"
        dapr.io/id: "echoapp"
        dapr.io/port: "3000"
        dapr.io/config: "pipeline"
    spec:
      containers:
      - name: echo
        image: <your Docker image tag>
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
